fix cmakelists with vcpfg

--- a/output/src/GameEngine/RendererModule/CMakeLists.txt
+++ b/output/src/GameEngine/RendererModule/CMakeLists.txt
@@ -6,10 +6,10 @@ set(CMAKE_CXX_STANDARD 20)
 
 include_directories(./)
 
-find_package(SFML 2.5 COMPONENTS graphics window system REQUIRED)
+find_package(SFML COMPONENTS system window graphics CONFIG REQUIRED)
 
 add_library(WindowModule
     WindowManager/Window.cpp
         Components/AnimationComponent/AnimationComponent.cpp)
 
-target_link_libraries(WindowModule sfml-graphics sfml-window sfml-system)
+target_link_libraries(WindowModule PRIVATE sfml-system sfml-network sfml-graphics sfml-window)
