[FIX] vcpkg setup command in automatic_release.yml

--- a/.github/workflows/automatic_release.yml
+++ b/.github/workflows/automatic_release.yml
@@ -22,7 +22,7 @@ jobs:
             - name: 'Checkout'
               uses: actions/checkout@v4
             - name: 'Setup vcpkg'
-              run: ./install_vcpkg.sh
+              run: bash install_vcpkg.sh
             - name: 'Binary build x86'
               run: 'set VCPKG_TARGET_ARCHITECTURE=x86 && cd output && bash build_release.sh && cd release && mv r-type_client${{ matrix.config.ext }} r-type_client_x86-${{ matrix.config.os }}${{ matrix.config.ext }} && mv r-type_server${{ matrix.config.ext }} r-type_server_x86-${{ matrix.config.os }}${{ matrix.config.ext }}'
             - name: 'Binary build x64'
