update cmakelist for audio

--- a/output/src/Client/CMakeLists.txt
+++ b/output/src/Client/CMakeLists.txt
@@ -4,7 +4,7 @@ project(r-type_client)
 
 set(CMAKE_CXX_STANDARD 20)
 
-find_package(SFML COMPONENTS system window graphics CONFIG REQUIRED)
+find_package(SFML COMPONENTS system window graphics audio CONFIG REQUIRED)
 
 add_executable(r-type_client
         src/main.cpp
@@ -71,7 +71,7 @@ add_executable(r-type_client
 )
 
 link_directories(${CMAKE_SOURCE_DIR}/GameEngine/NetworkingModule)
-target_link_libraries(r-type_client PRIVATE sfml-system sfml-network sfml-graphics sfml-audio sfml-window)
+target_link_libraries(r-type_client PRIVATE sfml-system sfml-network sfml-graphics sfml-window sfml-audio)
 
 
 # Link the libraries from RendererModule and EntityManager
