fix mac compilation

--- a/output/src/GameEngine/RendererModule/CMakeLists.txt
+++ b/output/src/GameEngine/RendererModule/CMakeLists.txt
@@ -12,4 +12,13 @@ add_library(WindowModule
     WindowManager/Window.cpp
         Components/AnimationComponent/AnimationComponent.cpp)
 
+if (APPLE)
+        find_library(COREAUDIO_LIBRARY CoreAudio)
+        find_library(AUDIOTOOLBOX_LIBRARY AudioToolbox)
+        find_library(AUDIOUNIT_LIBRARY AudioUnit)
+    
+        target_link_libraries(WindowModule PRIVATE ${COREAUDIO_LIBRARY} ${AUDIOTOOLBOX_LIBRARY} ${AUDIOUNIT_LIBRARY})
+    endif()
+
+
 target_link_libraries(WindowModule PRIVATE sfml-system sfml-network sfml-graphics sfml-window sfml-audio)
