--- a/output/src/Server/CMakeLists.txt
+++ b/output/src/Server/CMakeLists.txt
@@ -58,6 +58,15 @@ set(SERVER_SRC  ${CMAKE_CURRENT_SOURCE_DIR}/src/main.cpp
 add_executable(r-type_server ${SERVER_SRC})
 
 # Link libraries if needed
+
+if (APPLE)
+    find_library(COREAUDIO_LIBRARY CoreAudio)
+    find_library(AUDIOTOOLBOX_LIBRARY AudioToolbox)
+    find_library(AUDIOUNIT_LIBRARY AudioUnit)
+
+    target_link_libraries(r-type_server PRIVATE ${COREAUDIO_LIBRARY} ${AUDIOTOOLBOX_LIBRARY} ${AUDIOUNIT_LIBRARY})
+endif()
+
 target_link_libraries(r-type_server PRIVATE ${LIBS}  sfml-system sfml-network sfml-graphics sfml-window sfml-audio)
 
 add_custom_command(TARGET r-type_server POST_BUILD
