Oupsi Woopsi i forgot to add the tool.cpp in the cmakelist

--- a/output/src/Client/CMakeLists.txt
+++ b/output/src/Client/CMakeLists.txt
@@ -28,6 +28,7 @@ add_executable(r-type_client
         ../GameEngine/EntityManager/ComponentManager/GenericComponents/StringComponent/StringComponent.cpp
         ../GameEngine/EntityManager/ComponentManager/GenericComponents/Vector2fComponent/Vector2fComponent.cpp
         src/Game/Client.cpp
+        src/Game/Tools.cpp
         src/Game/ClientSettingManagement/ClientSettingManagement.cpp
         src/Game/ClientEntityManagement/ClientEntityManagement.cpp
         src/Game/ClientSpritesManagement/ClientSpriteManagement.cpp
@@ -50,6 +51,7 @@ add_executable(r-type_client
         ../GameEngine/RendererModule/Components/InputComponent/InputComponent.cpp
         ../GameEngine/NetworkingModule/NetworkingModule.cpp
         ../GameEngine/NetworkingModule/Client/Client.cpp
+        
         ../GameEngine/NetworkingModule/Buffer/Buffer.cpp
         ../GameEngine/NetworkingModule/Messaging/Messager.cpp
         ../GameEngine/NetworkingModule/exceptions/ClientDisconnectedException/ClientDisconnectedException.cpp
