--- a/.github/workflows/test_compilation.yml
+++ b/.github/workflows/test_compilation.yml
@@ -24,5 +24,5 @@ jobs:
     steps:
       - uses: 'actions/checkout@v3'
       - name: 'Check Compilation'
-        run: 'bash install_vcpkg.sh && cd output && bash compile.sh'
+        run: 'apt install libudev libx11 libxrandr libxcursor opengl && bash install_vcpkg.sh && cd output && bash compile.sh'
         timeout-minutes: 5
