Fix file renaming in automatic release workflow

--- a/.github/workflows/automatic_release.yml
+++ b/.github/workflows/automatic_release.yml
@@ -62,7 +62,7 @@ jobs:
             - name: 'Build'
               run: 'cd output && bash build_release.sh'
             - name: 'Rename binaries'
-              run: 'cd output/release && for f in *; do mv "$f" "${f%.*}${{ matrix.config.os }}.${{ matrix.config.ext }}"; done'
+              run: 'cd output/release && for f in * && do && mv "$f" "${f%.*}${{ matrix.config.os }}${{ matrix.config.ext }}" && done'
             - name: 'Upload binaries'
               uses: actions/upload-artifact@v3
               with:
