--- a/.github/workflows/test_compilation.yml
+++ b/.github/workflows/test_compilation.yml
@@ -24,5 +24,5 @@ jobs:
     steps:
       - uses: 'actions/checkout@v3'
       - name: 'Check Compilation'
-        run: 'sudo apt install libsfml-dev && bash install_vcpkg.sh && cd output && bash compile.sh'
+        run: 'sudo apt-get install libx11-dev libxrandr-dev libxcursor-dev libxi-dev libudev-dev libgl1-mesa-dev && bash install_vcpkg.sh && cd output && bash compile.sh'
         timeout-minutes: 5
