[ADD] change game over screen

--- a/output/src/AdvancedTrack/CMakeLists.txt
+++ b/output/src/AdvancedTrack/CMakeLists.txt
@@ -50,6 +50,7 @@ add_executable(game-advanced_track
         src/Game/EntityCreation/EntityCreation.cpp
         src/Game/GameManagement/GameManagement.cpp
         src/Game/MenuManagement/MenuManagement.cpp
+        src/Game/GameOverManagement/GameOverManagement.cpp
 )
 
 # Link the libraries from RendererModule and EntityManager
