--- a/.github/workflows/automatic_release.yml
+++ b/.github/workflows/automatic_release.yml
@@ -58,7 +58,7 @@ jobs:
             - name: 'Install vcpkg'
               run: 'bash install_vcpkg.sh'
             - name: 'Install dependencies'
-              run: './vcpkg/vcpkg install sfml:${{ matrix.config.triplet }}'
+              run: './vcpkg/vcpkg install sfml'
             - if: ${{ matrix.config.os == 'ubuntu-latest' }}
               name: 'Install dependencies (Ubuntu)'
               run: 'sudo apt-get install libx11-dev libxrandr-dev libxcursor-dev libxi-dev libudev-dev libgl1-mesa-dev libsfml-dev'
