--- a/output/src/Client/CMakeLists.txt
+++ b/output/src/Client/CMakeLists.txt
@@ -3,6 +3,7 @@ cmake_minimum_required(VERSION 3.10)
 project(r-type_client)
 
 set(CMAKE_CXX_STANDARD 20)
+set(LIBS -lpthread)
 
 find_package(SFML COMPONENTS system window graphics audio CONFIG REQUIRED)
 
